Fix/App store description overflow CSS (#441)
* Change overflow value to auto

* Fix default click handler for install app tile

* Address comment

* Apply suggestions from code review

--- a/src/css/components/_appstore-menu.scss
+++ b/src/css/components/_appstore-menu.scss
@@ -7,9 +7,6 @@
     flex-direction: column;
 }
 
-div::-webkit-scrollbar { 
-    display: none; 
-}
 
 .appstore-menu-item {
     @include display(flex);
